# cif-v2

./: .gitignore  .gitmodules  .project  AUTHORS  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  rebuild.sh
autom4te.cache/: output.0  traces.1
db/: Makefile.am
db/doc/hadoop/: hdfs-site.xml.in
db/src/: cif-registry.py  db-fsck.py  db-scan.py  install-hbase-small.sh  poc-db.py
db/src/DB/: Query.py
db/src/DB/Exploder/: Exploder.py  Indexer.py
db/src/DB/Purger/: Purger.py
doc/: cif-db to cif-router.graffle  overview.graffle
doc/install/: Hadoop-HBase-RH6-Small.md  ServerInstall_v2_RH6_Small.md
lib/: CIF.pm
lib/Bundle/: CIF.pm
lib/CIF/: APIKey.pm  Client.pm  DBI.pm  Feed.pm  Foundation.pm  Foundation.py  Profile.pm  RouterStats.py  Smrt.pm
lib/CIF/Client/: CIFPublisher.pm  Query.pm
lib/CIF/Client/Query/: Feed.pm
lib/CIF/Client/Transport/: CIFPublisher.pm
lib/CIF/CtrlCommands/: APIKeys.py  Clients.py  ThreadTracker.py
lib/CIF/Feed/Plugin/: Address.pm  Email.pm
libcif/: Makefile.am  configure.ac
libcif-dbi/: Makefile.am  configure.ac  rebuild.sh
libcif-dbi/lib/CIF/: APIKey.pm  DBI.pm  Feed.pm
libcif-dbi/lib/CIF/Feed/Plugin/: Address.pm
libcif/lib/: CIF.pm
libcif/lib/CIF/: Client.pm  Foundation.pm  Foundation.py
libcif/lib/CIF/Client/Transport/: CIFPublisher.pm
libcif/lib/CIF/CtrlCommands/: Clients.py  Ping.py  ThreadTracker.py
perl/lib/CIF/: _Msg.pm
perl/lib/CIF/Msg/: Feed.pm
perl/sbin/: generate_perl_bindings.pl
poc/: cif-router.py  cifsupport.py  foundation-test.pl  notes.txt  poc-publisher.py  poc-subscriber.py
poc/CIF/: Foundation.pm  Foundation.py  RouterStats.py
poc/CIF/CtrlCommands/: Clients.py
poc/CIFRouter/: MiniClient.py
poc/gen-py/cifipc/: ttypes.py
poc/protopy/: cifipc_pb2.py
prebuilt/: ICSG-v1_7-2007.proto  ICSG-v1_7-2007.thrift  MAEC-v2.proto  README  RFC4765-IDMEF-2007.proto  RFC4765-IDMEF-2007.thrift  RFC5070-IODEF-v1.proto  RFC5070-IODEF-v1.thrift
protocol/: INSTALL  Makefile.am  configure.ac  rebuild.sh
protocol/prebuilt/: ICSG-v1_7-2007.proto  MAEC-v2.proto  MAEC-v2.thrift  RFC4765-IDMEF-2007.proto
protocol/src/: Makefile.in  README  control.proto  msg.proto  submission.proto
protocol/src/pb-perl/: Makefile.PL  test.pl
protocol/src/pb-perl/lib/: ICSG_v1_7_2007_pb2.pm  MAEC_v2_pb2.pm  RFC4765_IDMEF_2007_pb2.pm  RFC5070_IODEF_v1_pb2.pm  mmdef_pb2.pm
protocol/src/pb-perl/lib/CIF/: Msg.pm  _Msg.pm
protocol/src/pb-perl/lib/CIF/Msg/: Control.pm  Feed.pm  Profile.pm  Submission.pm  Support.pm
protocol/src/pb-perl/sbin/: generate_perl_bindings.pl
protocol/src/pb-python/: README  test.py
protocol/src/pb-python/gen-py/: cifsupport.py.in
router/: Makefile.am  configure
router/autom4te.cache/: output.0  traces.0  traces.1
router/poc/: DEALER.py  ROUTER.py  cif-router.py  poc-publisher.py  poc-subscriber.py
router/poc/CIFRouter/: MiniClient.py  PubSubMgr.py
router/src/: Makefile.in
sbin/: test-dependencies
smrt/: ChangeLog  Makefile.am  configure.ac
smrt/lib/CIF/: Smrt.1.pm  Smrt.pm
smrt/lib/CIF/Smrt/: FetcherFactory.pm
smrt/lib/CIF/Smrt/Fetcher/: Plugin.pm
smrt/lib/CIF/Smrt/Fetcher/Plugin/: Uri.pm
smrt/lib/CIF/Smrt/Plugin/Pull/: Http.pm
smrt/rules/default/: phishtank.cfg
smrt/rules/etc/: phishtank.cfg
smrt/t/: 00-basic.t
src/: Makefile.am  Makefile.in  cli.py  control.proto  feed.proto  mmdef.proto  msg.proto  profile.proto
src/pb-perl/: test.pl
src/pb-perl/lib/CIF/: _Msg.pm
src/pb-perl/lib/CIF/Msg/: Feed.pm  Support.pm
src/pb-perl/sbin/: generate_perl_bindings.pl
src/pb-python/: README  test.py
src/pb-python/gen-py/: cifsupport.py  cifsupport.py.in
src/perl/lib/CIF/: _Msg.pm
src/perl/lib/CIF/Msg/: Feed.pm
src/perl/sbin/: generate_perl_bindings.pl
ui/: Makefile.am  Makefile.in  configure
ui/autom4te.cache/: output.0  traces.0  traces.1
ui/src/: Makefile.am  Makefile.in  cli.py
